fix sidenav toggle z-index

--- a/_includes/styles.scss
+++ b/_includes/styles.scss
@@ -163,6 +163,7 @@ div.page-wrapper {
     box-shadow: inset 0px -5px 4px 1px #f4f4ef;
     background-color: #fff;
     transition: width 0.4s;
+    z-index: 2;
 
     nav {
       height: 100%;
